# core-cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt
cmake/: flite.cmake
docs/: README.md  root_api.md  tts_api.md  websocket_notifier.md
include/wmnext/api/: api_routes.hpp  math_api.hpp  root_api.hpp  tts_api.hpp
include/wmnext/app/: server_application.hpp
include/wmnext/domain/: tts_pronunciation_request.hpp
include/wmnext/http/: json_response.hpp
include/wmnext/mq/: message_queue.hpp
include/wmnext/service/: tts_service.hpp
include/wmnext/ws/: websocket_message_queue_server.hpp  websocket_notifier.hpp
src/: main.cpp  pch.hpp
src/api/: api_routes.cpp  math_api.cpp  root_api.cpp  tts_api.cpp
src/app/: server_application.cpp
src/domain/: tts_pronunciation_request.cpp
src/http/: json_response.cpp
src/mq/: message_queue.cpp
src/service/: tts_service.cpp
src/ws/: websocket_message_queue_server.cpp  websocket_notifier.cpp
